sms log set to false again

--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/support": "^8.57||^9.0||^10.0",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
+        "phpoffice/phpword": "^1.0",
+        "xenon/laravelbdsms": "v1.0.48.1",
+        "xenon/multicourier": "^1.0",
+        "xenon/shoppingcart": "^2.6",
+        "xenon/sslcommerz": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -24,7 +32,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Touhidurabir\\StubGenerator\\": "packages/laravel-stub-generator/src/",
+            "Xenon\\LaravelBDSms\\": "packages/laravelbdsms/src/"
         }
     },
     "autoload-dev": {
@@ -52,6 +62,9 @@
             "dev-master": "10.x-dev"
         },
         "laravel": {
+            "aliases": {
+                "ModelRepository": "Touhidurabir\\StubGenerator\\Facades\\StubGenerator"
+            },
             "dont-discover": []
         }
     },
